# @markup rdoc
# @title Change History

== History


[jeni-0.2.3 21-Nov-2012]

  Generate templates to /tmp directory before transferring to target. Allow users to
  generate to an alternative target directory, either with target= method or optparse.
  Allow a block for optparse that passes through the optparse object to allow custom
  options to be added. Add classify method so templates can convert e.g. project name
  into a Ruby class (my_project -> MyProject).

[jeni-0.2.2 15-Nov-2012]

  Ensure new users/groups are remember for subsequent user/group tests

[jeni-0.2.1 26-Oct-2012]

  Added relative paths to targets that can take /usr/ or /usr/local as their root.
  Got rspec tests to work

[jeni-0.2.0 04-Oct-2012]

  Application forked from local 'jeni' due to Gam-space name clash.