@@ -1,36 +1,0 @@
-upstream coati {
-        server unix:/home/robert/dev/rails/coati/tmp/.sock fail_timeout=0;
-    }
-
-
-server {
-            listen   192.168.0.20:80;
-            server_name coati.lucius.osburn-sharp.ath.cx;
-
-            access_log /home/robert/dev/rails/coati/log/access.log;
-            error_log /home/robert/dev/rails/coati/log/error.log;
-
-            root   /home/robert/dev/rails/coati/public/;
-            index  index.html;
-
-            location / {
-                          proxy_set_header  X-Real-IP  $remote_addr;
-                          proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-                          proxy_set_header Host $http_host;
-                          proxy_redirect off;
-
-                          if (-f $request_filename/index.html) {
-                                           rewrite (.*) $1/index.html break;
-                          }
-
-                          if (-f $request_filename.html) {
-                                           rewrite (.*) $1.html break;
-                          }
-
-                          if (!-f $request_filename) {
-                                           proxy_pass http://coati;
-                                           break;
-                          }
-            }
-
-}
