@@ -1,3 +1,0 @@
-#!/usr/bin/env ruby18
-
-puts "Executing"
