@@ -1,10 +1,0 @@
-# Author: Me
-# Created at: 16:15 25-10-12
-
-module Amodule
-  class Aclass
-    def amethod
-      puts "Welcome and well met"
-    end
-  end
-end
