@@ -1,3 +1,0 @@
-#! /usr/bin/ruby -w
-
-puts "Just a test"
