@@ -1,12 +1,0 @@
-# THIS IS A STANDARD TEMPLATE
-# Author: Robert
-# Created at: 16:15 25-10-12
-
-module Amodule
-  class Aclass
-    def amethod
-      puts "How do you do?"
-    end
-  end
-end
-# the standard
