@@ -1,10 +1,0 @@
-# Author: #{author}
-# Created at: #{Time.now.strftime("%H:%M %d-%m-%y")}
-
-module Amodule
-  class Aclass
-    def amethod
-      puts "#{greeting}"
-    end
-  end
-end
